arvan-paas/server/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - resources:
            limits:
              cpu: 1000m
              ephemeral-storage: 100M
              memory: 1G
            requests:
              cpu: 1000m
              ephemeral-storage: 100M
              memory: 1G
          terminationMessagePath: /dev/termination-log
          name: server
          ports:
            - containerPort: 1212
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/verify
              port: 1212
            initialDelaySeconds: 60
            periodSeconds: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /api/v1/verify
              port: 1212
            initialDelaySeconds: 120
            failureThreshold: 1
            periodSeconds: 10
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: registry.gitlab.com/toofun-group/kaseb-server
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: private-reg
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
